# skidl-claude-plugin

./: .gitignore  .mcp.json  HOWTO.md  PLAN.md  README.md  TODO.md  pyproject.toml
.claude-plugin/: plugin.json
.council/: .gitignore  council.yaml
.council/memory/: canonical-design-model.md  electronics-collaboration-loop.md  mvp-golden-fixture.md  typed-design-operations.md
.council/records/: 20260705-153200-design-as-code-tool.md  20260705-153200-design-as-code-tool.scratch.md
.council/seats/: electrical-engineer.md  product-manager.md  qa-engineer.md  security-engineer.md  staff-engineer.md
docs/superpowers/plans/: 2026-07-10-phase-c-design-patch.md
docs/superpowers/specs/: 2026-07-10-phase-c-design-patch-design.md
examples/voltage_divider/: README.md  build_divider.py
src/skidl_mcp/: __init__.py  circuit_manager.py  prompts.py  resources.py  server.py  skidl_quiet.py
src/skidl_mcp/tools/: __init__.py  artifact_io.py  circuit.py  design_patch.py  generate.py  inspect.py  nets.py  parts.py  project_io.py  validate.py
tests/: test_circuit_manager.py  test_design_patch.py  test_example_voltage_divider.py  test_inspect_design.py  test_integration_kicad.py  test_no_artifacts.py  test_output_path.py  test_project_io.py  test_tools.py
