[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skidl-mcp"
version = "0.1.0"
description = "MCP server for designing electronic schematics and PCB layouts using SKiDL"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Matt Currier" },
]
keywords = ["skidl", "mcp", "electronics", "schematic", "pcb", "kicad", "eda"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "skidl>=2.2.0",
    "fastmcp>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
skidl-mcp = "skidl_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skidl_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
